flux/infrastructure/services/authelia/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect
  labels:
    app.kubernetes.io/name: authelia
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - auth.stehessel.org
  rules:
    - backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
